--- a/rust_mc/Cargo.toml
+++ b/rust_mc/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.5.8", features = ["derive"] }
 image = "0.25.1"
+indicatif = "0.17.8"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
