--- a/rust_mc/Cargo.toml
+++ b/rust_mc/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 clap = { version = "4.5.8", features = ["derive"] }
 image = "0.25.1"
 indicatif = "0.17.8"
-rand = "0.8.5"
+rand = { version = "0.8.5", features = ["small_rng"] }
 rand_chacha = "0.3.1"
 rayon = "1.10.0"
