--- a/rust_mc/Cargo.toml
+++ b/rust_mc/Cargo.toml
@@ -10,3 +10,10 @@ indicatif = "0.17.8"
 rand = { version = "0.8.5", features = ["small_rng"] }
 rand_chacha = "0.3.1"
 rayon = "1.10.0"
+
+[profile.release-with-debug]
+inherits = "release"
+debug = true
+
+[rust]
+debuginfo-level = 1
