--- a/rust_mc/Cargo.toml
+++ b/rust_mc/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.8", features = ["derive"] }
+enterpolation = "0.2.1"
 image = "0.25.1"
 indicatif = "0.17.8"
+palette = "0.7.6"
 rand = { version = "0.8.5", features = ["small_rng"] }
 rand_chacha = "0.3.1"
 rayon = "1.10.0"
